deploy: fd2b35e7e948cdb11280c94e799889c845c543b6

--- a/index.html
+++ b/index.html
@@ -744,142 +744,147 @@
       <img class="thumb" src="games/10 Minutes Till Dawn/thumbnail.png" alt="10 Minutes Till Dawn">
     </div>
     <div class="card-title">10 Minutes Till Dawn</div>
-  </div><div class="card game-card" data-index="1" data-folder="Age Of War" data-name="age of war" onclick="prepareGame('Age%20Of%20War','Age%20Of%20War','games/Age Of War/thumbnail.png')">
+  </div><div class="card game-card" data-index="1" data-folder="99 Nights in the Forest" data-name="99 nights in the forest" onclick="prepareGame('99%20Nights%20in%20the%20Forest','99%20Nights%20in%20the%20Forest','games/99 Nights in the Forest/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/99 Nights in the Forest/thumbnail.png')">
+      <img class="thumb" src="games/99 Nights in the Forest/thumbnail.png" alt="99 Nights in the Forest">
+    </div>
+    <div class="card-title">99 Nights in the Forest</div>
+  </div><div class="card game-card" data-index="2" data-folder="Age Of War" data-name="age of war" onclick="prepareGame('Age%20Of%20War','Age%20Of%20War','games/Age Of War/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Age Of War/thumbnail.png')">
       <img class="thumb" src="games/Age Of War/thumbnail.png" alt="Age Of War">
     </div>
     <div class="card-title">Age Of War</div>
-  </div><div class="card game-card" data-index="2" data-folder="BTD5" data-name="btd5" onclick="prepareGame('BTD5','BTD5','games/BTD5/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="3" data-folder="BTD5" data-name="btd5" onclick="prepareGame('BTD5','BTD5','games/BTD5/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/BTD5/thumbnail.jpg')">
       <img class="thumb" src="games/BTD5/thumbnail.jpg" alt="BTD5">
     </div>
     <div class="card-title">BTD5</div>
-  </div><div class="card game-card" data-index="3" data-folder="Backrooms 2D" data-name="backrooms 2d" onclick="prepareGame('Backrooms%202D','Backrooms%202D','games/Backrooms 2D/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="4" data-folder="Backrooms 2D" data-name="backrooms 2d" onclick="prepareGame('Backrooms%202D','Backrooms%202D','games/Backrooms 2D/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Backrooms 2D/thumbnail.jpg')">
       <img class="thumb" src="games/Backrooms 2D/thumbnail.jpg" alt="Backrooms 2D">
     </div>
     <div class="card-title">Backrooms 2D</div>
-  </div><div class="card game-card" data-index="4" data-folder="Bad Piggies" data-name="bad piggies" onclick="prepareGame('Bad%20Piggies','Bad%20Piggies','games/Bad Piggies/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="5" data-folder="Bad Piggies" data-name="bad piggies" onclick="prepareGame('Bad%20Piggies','Bad%20Piggies','games/Bad Piggies/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Bad Piggies/thumbnail.jpg')">
       <img class="thumb" src="games/Bad Piggies/thumbnail.jpg" alt="Bad Piggies">
     </div>
     <div class="card-title">Bad Piggies</div>
-  </div><div class="card game-card" data-index="5" data-folder="Bad Time Simulator" data-name="bad time simulator" onclick="prepareGame('Bad%20Time%20Simulator','Bad%20Time%20Simulator','games/Bad Time Simulator/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="6" data-folder="Bad Time Simulator" data-name="bad time simulator" onclick="prepareGame('Bad%20Time%20Simulator','Bad%20Time%20Simulator','games/Bad Time Simulator/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Bad Time Simulator/thumbnail.jpg')">
       <img class="thumb" src="games/Bad Time Simulator/thumbnail.jpg" alt="Bad Time Simulator">
     </div>
     <div class="card-title">Bad Time Simulator</div>
-  </div><div class="card game-card" data-index="6" data-folder="Baldi’s Basics" data-name="baldi’s basics" onclick="prepareGame('Baldi%E2%80%99s%20Basics','Baldi%E2%80%99s%20Basics','games/Baldi’s Basics/thumbnail.png')">
+  </div><div class="card game-card" data-index="7" data-folder="Baldi’s Basics" data-name="baldi’s basics" onclick="prepareGame('Baldi%E2%80%99s%20Basics','Baldi%E2%80%99s%20Basics','games/Baldi’s Basics/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Baldi’s Basics/thumbnail.png')">
       <img class="thumb" src="games/Baldi’s Basics/thumbnail.png" alt="Baldi’s Basics">
     </div>
     <div class="card-title">Baldi’s Basics</div>
-  </div><div class="card game-card" data-index="7" data-folder="Basketball FRVR" data-name="basketball frvr" onclick="prepareGame('Basketball%20FRVR','Basketball%20FRVR','games/Basketball FRVR/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="8" data-folder="Basketball FRVR" data-name="basketball frvr" onclick="prepareGame('Basketball%20FRVR','Basketball%20FRVR','games/Basketball FRVR/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Basketball FRVR/thumbnail.jpg')">
       <img class="thumb" src="games/Basketball FRVR/thumbnail.jpg" alt="Basketball FRVR">
     </div>
     <div class="card-title">Basketball FRVR</div>
-  </div><div class="card game-card" data-index="8" data-folder="Bit Planes" data-name="bit planes" onclick="prepareGame('Bit%20Planes','Bit%20Planes','games/Bit Planes/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="9" data-folder="Bit Planes" data-name="bit planes" onclick="prepareGame('Bit%20Planes','Bit%20Planes','games/Bit Planes/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Bit Planes/thumbnail.jpg')">
       <img class="thumb" src="games/Bit Planes/thumbnail.jpg" alt="Bit Planes">
     </div>
     <div class="card-title">Bit Planes</div>
-  </div><div class="card game-card" data-index="9" data-folder="Bitlife" data-name="bitlife" onclick="prepareGame('Bitlife','Bitlife','games/Bitlife/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="10" data-folder="Bitlife" data-name="bitlife" onclick="prepareGame('Bitlife','Bitlife','games/Bitlife/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Bitlife/thumbnail.jpg')">
       <img class="thumb" src="games/Bitlife/thumbnail.jpg" alt="Bitlife">
     </div>
     <div class="card-title">Bitlife</div>
-  </div><div class="card game-card" data-index="10" data-folder="Blackjack" data-name="blackjack" onclick="prepareGame('Blackjack','Blackjack','games/Blackjack/thumbnail.png')">
+  </div><div class="card game-card" data-index="11" data-folder="Blackjack" data-name="blackjack" onclick="prepareGame('Blackjack','Blackjack','games/Blackjack/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Blackjack/thumbnail.png')">
       <img class="thumb" src="games/Blackjack/thumbnail.png" alt="Blackjack">
     </div>
     <div class="card-title">Blackjack</div>
-  </div><div class="card game-card" data-index="11" data-folder="Block Blast" data-name="block blast" onclick="prepareGame('Block%20Blast','Block%20Blast','games/Block Blast/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="12" data-folder="Block Blast" data-name="block blast" onclick="prepareGame('Block%20Blast','Block%20Blast','games/Block Blast/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Block Blast/thumbnail.jpg')">
       <img class="thumb" src="games/Block Blast/thumbnail.jpg" alt="Block Blast">
     </div>
     <div class="card-title">Block Blast</div>
-  </div><div class="card game-card" data-index="12" data-folder="Bob The Robber 1" data-name="bob the robber 1" onclick="prepareGame('Bob%20The%20Robber%201','Bob%20The%20Robber%201','games/Bob The Robber 1/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="13" data-folder="Bob The Robber 1" data-name="bob the robber 1" onclick="prepareGame('Bob%20The%20Robber%201','Bob%20The%20Robber%201','games/Bob The Robber 1/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 1/thumbnail.jpg')">
       <img class="thumb" src="games/Bob The Robber 1/thumbnail.jpg" alt="Bob The Robber 1">
     </div>
     <div class="card-title">Bob The Robber 1</div>
-  </div><div class="card game-card" data-index="13" data-folder="Bob The Robber 2" data-name="bob the robber 2" onclick="prepareGame('Bob%20The%20Robber%202','Bob%20The%20Robber%202','games/Bob The Robber 2/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="14" data-folder="Bob The Robber 2" data-name="bob the robber 2" onclick="prepareGame('Bob%20The%20Robber%202','Bob%20The%20Robber%202','games/Bob The Robber 2/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 2/thumbnail.jpg')">
       <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2">
     </div>
     <div class="card-title">Bob The Robber 2</div>
-  </div><div class="card game-card" data-index="14" data-folder="Bob The Robber 5" data-name="bob the robber 5" onclick="prepareGame('Bob%20The%20Robber%205','Bob%20The%20Robber%205','games/Bob The Robber 5/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="15" data-folder="Bob The Robber 5" data-name="bob the robber 5" onclick="prepareGame('Bob%20The%20Robber%205','Bob%20The%20Robber%205','games/Bob The Robber 5/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 5/thumbnail.jpg')">
       <img class="thumb" src="games/Bob The Robber 5/thumbnail.jpg" alt="Bob The Robber 5">
     </div>
     <div class="card-title">Bob The Robber 5</div>
-  </div><div class="card game-card" data-index="15" data-folder="Bouncemasters" data-name="bouncemasters" onclick="prepareGame('Bouncemasters','Bouncemasters','games/Bouncemasters/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="16" data-folder="Bouncemasters" data-name="bouncemasters" onclick="prepareGame('Bouncemasters','Bouncemasters','games/Bouncemasters/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Bouncemasters/thumbnail.jpg')">
       <img class="thumb" src="games/Bouncemasters/thumbnail.jpg" alt="Bouncemasters">
     </div>
     <div class="card-title">Bouncemasters</div>
-  </div><div class="card game-card" data-index="16" data-folder="Bouncy Motors" data-name="bouncy motors" onclick="prepareGame('Bouncy%20Motors','Bouncy%20Motors','games/Bouncy Motors/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="17" data-folder="Bouncy Motors" data-name="bouncy motors" onclick="prepareGame('Bouncy%20Motors','Bouncy%20Motors','games/Bouncy Motors/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Bouncy Motors/thumbnail.jpg')">
       <img class="thumb" src="games/Bouncy Motors/thumbnail.jpg" alt="Bouncy Motors">
     </div>
     <div class="card-title">Bouncy Motors</div>
-  </div><div class="card game-card" data-index="17" data-folder="Burrito Bison Launcha Libre" data-name="burrito bison launcha libre" onclick="prepareGame('Burrito%20Bison%20Launcha%20Libre','Burrito%20Bison%20Launcha%20Libre','games/Burrito Bison Launcha Libre/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="18" data-folder="Burrito Bison Launcha Libre" data-name="burrito bison launcha libre" onclick="prepareGame('Burrito%20Bison%20Launcha%20Libre','Burrito%20Bison%20Launcha%20Libre','games/Burrito Bison Launcha Libre/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Burrito Bison Launcha Libre/thumbnail.jpg')">
       <img class="thumb" src="games/Burrito Bison Launcha Libre/thumbnail.jpg" alt="Burrito Bison Launcha Libre">
     </div>
     <div class="card-title">Burrito Bison Launcha Libre</div>
-  </div><div class="card game-card" data-index="18" data-folder="Crazy Cattle 3D" data-name="crazy cattle 3d" onclick="prepareGame('Crazy%20Cattle%203D','Crazy%20Cattle%203D','games/Crazy Cattle 3D/thumbnail.png')">
+  </div><div class="card game-card" data-index="19" data-folder="Crazy Cattle 3D" data-name="crazy cattle 3d" onclick="prepareGame('Crazy%20Cattle%203D','Crazy%20Cattle%203D','games/Crazy Cattle 3D/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Crazy Cattle 3D/thumbnail.png')">
       <img class="thumb" src="games/Crazy Cattle 3D/thumbnail.png" alt="Crazy Cattle 3D">
     </div>
     <div class="card-title">Crazy Cattle 3D</div>
-  </div><div class="card game-card" data-index="19" data-folder="Crazy Motorcycle" data-name="crazy motorcycle" onclick="prepareGame('Crazy%20Motorcycle','Crazy%20Motorcycle','games/Crazy Motorcycle/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="20" data-folder="Crazy Motorcycle" data-name="crazy motorcycle" onclick="prepareGame('Crazy%20Motorcycle','Crazy%20Motorcycle','games/Crazy Motorcycle/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Crazy Motorcycle/thumbnail.jpg')">
       <img class="thumb" src="games/Crazy Motorcycle/thumbnail.jpg" alt="Crazy Motorcycle">
     </div>
     <div class="card-title">Crazy Motorcycle</div>
-  </div><div class="card game-card" data-index="20" data-folder="Crossy Road" data-name="crossy road" onclick="prepareGame('Crossy%20Road','Crossy%20Road','games/Crossy Road/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="21" data-folder="Crossy Road" data-name="crossy road" onclick="prepareGame('Crossy%20Road','Crossy%20Road','games/Crossy Road/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Crossy Road/thumbnail.jpg')">
       <img class="thumb" src="games/Crossy Road/thumbnail.jpg" alt="Crossy Road">
     </div>
     <div class="card-title">Crossy Road</div>
-  </div><div class="card game-card" data-index="21" data-folder="Doki Doki Literature Club" data-name="doki doki literature club" onclick="prepareGame('Doki%20Doki%20Literature%20Club','Doki%20Doki%20Literature%20Club','games/Doki Doki Literature Club/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="22" data-folder="Doki Doki Literature Club" data-name="doki doki literature club" onclick="prepareGame('Doki%20Doki%20Literature%20Club','Doki%20Doki%20Literature%20Club','games/Doki Doki Literature Club/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Doki Doki Literature Club/thumbnail.jpg')">
       <img class="thumb" src="games/Doki Doki Literature Club/thumbnail.jpg" alt="Doki Doki Literature Club">
     </div>
     <div class="card-title">Doki Doki Literature Club</div>
-  </div><div class="card game-card" data-index="22" data-folder="Earn To Die 2" data-name="earn to die 2" onclick="prepareGame('Earn%20To%20Die%202','Earn%20To%20Die%202','games/Earn To Die 2/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="23" data-folder="Earn To Die 2" data-name="earn to die 2" onclick="prepareGame('Earn%20To%20Die%202','Earn%20To%20Die%202','games/Earn To Die 2/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Earn To Die 2/thumbnail.jpg')">
       <img class="thumb" src="games/Earn To Die 2/thumbnail.jpg" alt="Earn To Die 2">
     </div>
     <div class="card-title">Earn To Die 2</div>
-  </div><div class="card game-card" data-index="23" data-folder="Friday Night Funkin" data-name="friday night funkin" onclick="prepareGame('Friday%20Night%20Funkin','Friday%20Night%20Funkin','games/Friday Night Funkin/thumbnail.png')">
+  </div><div class="card game-card" data-index="24" data-folder="Friday Night Funkin" data-name="friday night funkin" onclick="prepareGame('Friday%20Night%20Funkin','Friday%20Night%20Funkin','games/Friday Night Funkin/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Friday Night Funkin/thumbnail.png')">
       <img class="thumb" src="games/Friday Night Funkin/thumbnail.png" alt="Friday Night Funkin">
     </div>
     <div class="card-title">Friday Night Funkin</div>
-  </div><div class="card game-card" data-index="24" data-folder="Fruit Ninja" data-name="fruit ninja" onclick="prepareGame('Fruit%20Ninja','Fruit%20Ninja','games/Fruit Ninja/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="25" data-folder="Fruit Ninja" data-name="fruit ninja" onclick="prepareGame('Fruit%20Ninja','Fruit%20Ninja','games/Fruit Ninja/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Fruit Ninja/thumbnail.jpg')">
       <img class="thumb" src="games/Fruit Ninja/thumbnail.jpg" alt="Fruit Ninja">
     </div>
     <div class="card-title">Fruit Ninja</div>
-  </div><div class="card game-card" data-index="25" data-folder="Geometry Dash Lite" data-name="geometry dash lite" onclick="prepareGame('Geometry%20Dash%20Lite','Geometry%20Dash%20Lite','games/Geometry Dash Lite/thumbnail.png')">
+  </div><div class="card game-card" data-index="26" data-folder="Geometry Dash Lite" data-name="geometry dash lite" onclick="prepareGame('Geometry%20Dash%20Lite','Geometry%20Dash%20Lite','games/Geometry Dash Lite/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Geometry Dash Lite/thumbnail.png')">
       <img class="thumb" src="games/Geometry Dash Lite/thumbnail.png" alt="Geometry Dash Lite">
     </div>
     <div class="card-title">Geometry Dash Lite</div>
-  </div><div class="card game-card" data-index="26" data-folder="Happy Wheels" data-name="happy wheels" onclick="prepareGame('Happy%20Wheels','Happy%20Wheels','games/Happy Wheels/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="27" data-folder="Happy Wheels" data-name="happy wheels" onclick="prepareGame('Happy%20Wheels','Happy%20Wheels','games/Happy Wheels/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Happy Wheels/thumbnail.jpg')">
       <img class="thumb" src="games/Happy Wheels/thumbnail.jpg" alt="Happy Wheels">
     </div>
     <div class="card-title">Happy Wheels</div>
-  </div><div class="card game-card" data-index="27" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="28" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
       <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope">
     </div>
     <div class="card-title">Slope</div>
-  </div><div class="card game-card" data-index="28" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="29" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
