deploy: 19fed8ae0613ad7293daaf6711816d09b0ab8592

--- a/index.html
+++ b/index.html
@@ -854,37 +854,42 @@
       <img class="thumb" src="games/Doki Doki Literature Club/thumbnail.jpg" alt="Doki Doki Literature Club">
     </div>
     <div class="card-title">Doki Doki Literature Club</div>
-  </div><div class="card game-card" data-index="23" data-folder="Earn To Die 2" data-name="earn to die 2" onclick="prepareGame('Earn%20To%20Die%202','Earn%20To%20Die%202','games/Earn To Die 2/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="23" data-folder="Drift Hunters" data-name="drift hunters" onclick="prepareGame('Drift%20Hunters','Drift%20Hunters','games/Drift Hunters/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Drift Hunters/thumbnail.png')">
+      <img class="thumb" src="games/Drift Hunters/thumbnail.png" alt="Drift Hunters">
+    </div>
+    <div class="card-title">Drift Hunters</div>
+  </div><div class="card game-card" data-index="24" data-folder="Earn To Die 2" data-name="earn to die 2" onclick="prepareGame('Earn%20To%20Die%202','Earn%20To%20Die%202','games/Earn To Die 2/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Earn To Die 2/thumbnail.jpg')">
       <img class="thumb" src="games/Earn To Die 2/thumbnail.jpg" alt="Earn To Die 2">
     </div>
     <div class="card-title">Earn To Die 2</div>
-  </div><div class="card game-card" data-index="24" data-folder="Friday Night Funkin" data-name="friday night funkin" onclick="prepareGame('Friday%20Night%20Funkin','Friday%20Night%20Funkin','games/Friday Night Funkin/thumbnail.png')">
+  </div><div class="card game-card" data-index="25" data-folder="Friday Night Funkin" data-name="friday night funkin" onclick="prepareGame('Friday%20Night%20Funkin','Friday%20Night%20Funkin','games/Friday Night Funkin/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Friday Night Funkin/thumbnail.png')">
       <img class="thumb" src="games/Friday Night Funkin/thumbnail.png" alt="Friday Night Funkin">
     </div>
     <div class="card-title">Friday Night Funkin</div>
-  </div><div class="card game-card" data-index="25" data-folder="Fruit Ninja" data-name="fruit ninja" onclick="prepareGame('Fruit%20Ninja','Fruit%20Ninja','games/Fruit Ninja/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="26" data-folder="Fruit Ninja" data-name="fruit ninja" onclick="prepareGame('Fruit%20Ninja','Fruit%20Ninja','games/Fruit Ninja/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Fruit Ninja/thumbnail.jpg')">
       <img class="thumb" src="games/Fruit Ninja/thumbnail.jpg" alt="Fruit Ninja">
     </div>
     <div class="card-title">Fruit Ninja</div>
-  </div><div class="card game-card" data-index="26" data-folder="Geometry Dash Lite" data-name="geometry dash lite" onclick="prepareGame('Geometry%20Dash%20Lite','Geometry%20Dash%20Lite','games/Geometry Dash Lite/thumbnail.png')">
+  </div><div class="card game-card" data-index="27" data-folder="Geometry Dash Lite" data-name="geometry dash lite" onclick="prepareGame('Geometry%20Dash%20Lite','Geometry%20Dash%20Lite','games/Geometry Dash Lite/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Geometry Dash Lite/thumbnail.png')">
       <img class="thumb" src="games/Geometry Dash Lite/thumbnail.png" alt="Geometry Dash Lite">
     </div>
     <div class="card-title">Geometry Dash Lite</div>
-  </div><div class="card game-card" data-index="27" data-folder="Happy Wheels" data-name="happy wheels" onclick="prepareGame('Happy%20Wheels','Happy%20Wheels','games/Happy Wheels/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="28" data-folder="Happy Wheels" data-name="happy wheels" onclick="prepareGame('Happy%20Wheels','Happy%20Wheels','games/Happy Wheels/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Happy Wheels/thumbnail.jpg')">
       <img class="thumb" src="games/Happy Wheels/thumbnail.jpg" alt="Happy Wheels">
     </div>
     <div class="card-title">Happy Wheels</div>
-  </div><div class="card game-card" data-index="28" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="29" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
       <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope">
     </div>
     <div class="card-title">Slope</div>
-  </div><div class="card game-card" data-index="29" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="30" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
