--- a/index.html
+++ b/index.html
@@ -906,12 +906,17 @@
       <img class="thumb" src="games/Happy Wheels/thumbnail.jpg" alt="Happy Wheels">
     </div>
     <div class="card-title">Happy Wheels</div>
-  </div><div class="card game-card" data-index="29" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="29" data-folder="Shreks Hotel" data-name="shreks hotel" onclick="prepareGame('Shreks%20Hotel','Shreks%20Hotel','games/Shreks Hotel/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Shreks Hotel/thumbnail.png')">
+      <img class="thumb" src="games/Shreks Hotel/thumbnail.png" alt="Shreks Hotel">
+    </div>
+    <div class="card-title">Shreks Hotel</div>
+  </div><div class="card game-card" data-index="30" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
       <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope">
     </div>
     <div class="card-title">Slope</div>
-  </div><div class="card game-card" data-index="30" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="31" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
