deploy: 00aa2c4e9a6f1afa2eccafe3f031d8cc6c3f5518

--- a/index.html
+++ b/index.html
@@ -866,9 +866,9 @@
       <img class="thumb" src="games/Doki Doki Literature Club/thumbnail.jpg" alt="Doki Doki Literature Club">
     </div>
     <div class="card-title">Doki Doki Literature Club</div>
-  </div><div class="card game-card" data-index="21" data-folder="Earn To Die 2" data-name="earn to die 2" onclick="prepareGame('Earn%20To%20Die%202','Earn%20To%20Die%202','games/Earn To Die 2/thumbnail.jpg')">
-    <div class="thumb-container" style="--thumb-url: url('games/Earn To Die 2/thumbnail.jpg')">
-      <img class="thumb" src="games/Earn To Die 2/thumbnail.jpg" alt="Earn To Die 2">
+  </div><div class="card game-card" data-index="21" data-folder="Earn To Die 2" data-name="earn to die 2" onclick="prepareGame('Earn%20To%20Die%202','Earn%20To%20Die%202','games/Earn To Die 2/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Earn To Die 2/thumbnail.png')">
+      <img class="thumb" src="games/Earn To Die 2/thumbnail.png" alt="Earn To Die 2">
     </div>
     <div class="card-title">Earn To Die 2</div>
   </div><div class="card game-card" data-index="22" data-folder="Escape Road " data-name="escape road " onclick="prepareGame('Escape%20Road%20','Escape%20Road%20','games/Escape Road /thumbnail.png')">
@@ -901,17 +901,12 @@
       <img class="thumb" src="games/Happy Wheels/thumbnail.jpg" alt="Happy Wheels">
     </div>
     <div class="card-title">Happy Wheels</div>
-  </div><div class="card game-card" data-index="28" data-folder="Shreks Hotel" data-name="shreks hotel" onclick="prepareGame('Shreks%20Hotel','Shreks%20Hotel','games/Shreks Hotel/thumbnail.png')">
-    <div class="thumb-container" style="--thumb-url: url('games/Shreks Hotel/thumbnail.png')">
-      <img class="thumb" src="games/Shreks Hotel/thumbnail.png" alt="Shreks Hotel">
-    </div>
-    <div class="card-title">Shreks Hotel</div>
-  </div><div class="card game-card" data-index="29" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="28" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
       <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope">
     </div>
     <div class="card-title">Slope</div>
-  </div><div class="card game-card" data-index="30" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="29" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
