deploy: 70dc5a03448b234731a629d9361aa779df4747e7

--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
     <header onclick="goToHome()"><img src="assets/logo.png" alt="Logo"></header>
     <ul id="categoryList">
       <li onclick="filterCategory('Home')">Home</li>
-      <li onclick="filterCategory('Uncategorized')">Uncategorized</li><li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Tower Defence')">Tower Defence</li><li onclick="filterCategory('Horror')">Horror</li><li onclick="filterCategory('Basketball')">Basketball</li><li onclick="filterCategory('Clickers')">Clickers</li><li onclick="filterCategory('Sniper')">Sniper</li><li onclick="filterCategory('Racing')">Racing</li><li onclick="filterCategory('2 Player')">2 Player</li>
+      <li onclick="filterCategory('Uncategorized')">Uncategorized</li><li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Tower Defence')">Tower Defence</li><li onclick="filterCategory('Horror')">Horror</li><li onclick="filterCategory('Basketball')">Basketball</li><li onclick="filterCategory('Clickers')">Clickers</li><li onclick="filterCategory('Sniper')">Sniper</li><li onclick="filterCategory('Racing')">Racing</li><li onclick="filterCategory('2 Player')">2 Player</li><li onclick="filterCategory('Platformer')">Platformer</li>
     </ul>
   </div>
 
@@ -1121,6 +1121,16 @@
           </div>
         </div><div class="category" data-category="2 Player">
           <h2>2 Player</h2>
+          <div class="grid">
+            <div class="card game-card" data-index="0" data-folder="Fireboy and Watergirl 1" data-name="fireboy and watergirl 1" onclick="prepareGame('Fireboy%20and%20Watergirl%201','Fireboy%20and%20Watergirl%201','games/Fireboy and Watergirl 1/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Fireboy and Watergirl 1/thumbnail.jpg')">
+      <img class="thumb" src="games/Fireboy and Watergirl 1/thumbnail.jpg" alt="Fireboy and Watergirl 1">
+    </div>
+    <div class="card-title">Fireboy and Watergirl 1</div>
+  </div>
+          </div>
+        </div><div class="category" data-category="Platformer">
+          <h2>Platformer</h2>
           <div class="grid">
             <div class="card game-card" data-index="0" data-folder="Fireboy and Watergirl 1" data-name="fireboy and watergirl 1" onclick="prepareGame('Fireboy%20and%20Watergirl%201','Fireboy%20and%20Watergirl%201','games/Fireboy and Watergirl 1/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Fireboy and Watergirl 1/thumbnail.jpg')">
