deploy: 13cf50e197cfb9ab559fa8e4aca8e5ea19c0dab4

--- a/index.html
+++ b/index.html
@@ -1007,9 +1007,9 @@
       <img class="thumb" src="games/Bad Parenting/thumbnail.jpg" alt="Bad Parenting">
     </div>
     <div class="card-title">Bad Parenting</div>
-  </div><div class="card game-card" data-index="1" data-folder="Chesire in a Chatroom" data-name="chesire in a chatroom" onclick="prepareGame('Chesire%20in%20a%20Chatroom','Chesire%20in%20a%20Chatroom','games/Chesire in a Chatroom/thumbnail.jpg')">
-    <div class="thumb-container" style="--thumb-url: url('games/Chesire in a Chatroom/thumbnail.jpg')">
-      <img class="thumb" src="games/Chesire in a Chatroom/thumbnail.jpg" alt="Chesire in a Chatroom">
+  </div><div class="card game-card" data-index="1" data-folder="Chesire in a Chatroom" data-name="chesire in a chatroom" onclick="prepareGame('Chesire%20in%20a%20Chatroom','Chesire%20in%20a%20Chatroom','games/Chesire in a Chatroom/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Chesire in a Chatroom/thumbnail.png')">
+      <img class="thumb" src="games/Chesire in a Chatroom/thumbnail.png" alt="Chesire in a Chatroom">
     </div>
     <div class="card-title">Chesire in a Chatroom</div>
   </div><div class="card game-card" data-index="2" data-folder="Crank It!" data-name="crank it!" onclick="prepareGame('Crank%20It!','Crank%20It!','games/Crank It!/thumbnail.jpg')">
