deploy: 914d52656aa743dd870314517fd2d760cda267dc

--- a/index.html
+++ b/index.html
@@ -847,9 +847,9 @@
       <img class="thumb" src="games/Age Of War/thumbnail.png" alt="Age Of War">
     </div>
     <div class="card-title">Age Of War</div>
-  </div><div class="card game-card" data-index="2" data-folder="Backrooms 2D" data-name="backrooms 2d" onclick="prepareGame('Backrooms%202D','Backrooms%202D','games/Backrooms 2D/thumbnail.jpg')">
-    <div class="thumb-container" style="--thumb-url: url('games/Backrooms 2D/thumbnail.jpg')">
-      <img class="thumb" src="games/Backrooms 2D/thumbnail.jpg" alt="Backrooms 2D">
+  </div><div class="card game-card" data-index="2" data-folder="Backrooms 2D" data-name="backrooms 2d" onclick="prepareGame('Backrooms%202D','Backrooms%202D','games/Backrooms 2D/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Backrooms 2D/thumbnail.png')">
+      <img class="thumb" src="games/Backrooms 2D/thumbnail.png" alt="Backrooms 2D">
     </div>
     <div class="card-title">Backrooms 2D</div>
   </div><div class="card game-card" data-index="3" data-folder="Bad Piggies" data-name="bad piggies" onclick="prepareGame('Bad%20Piggies','Bad%20Piggies','games/Bad Piggies/thumbnail.jpg')">
@@ -1007,47 +1007,42 @@
       <img class="thumb" src="games/Bad Parenting/thumbnail.jpg" alt="Bad Parenting">
     </div>
     <div class="card-title">Bad Parenting</div>
-  </div><div class="card game-card" data-index="1" data-folder="Chesire in a Chatroom" data-name="chesire in a chatroom" onclick="prepareGame('Chesire%20in%20a%20Chatroom','Chesire%20in%20a%20Chatroom','games/Chesire in a Chatroom/thumbnail.png')">
-    <div class="thumb-container" style="--thumb-url: url('games/Chesire in a Chatroom/thumbnail.png')">
-      <img class="thumb" src="games/Chesire in a Chatroom/thumbnail.png" alt="Chesire in a Chatroom">
-    </div>
-    <div class="card-title">Chesire in a Chatroom</div>
-  </div><div class="card game-card" data-index="2" data-folder="Crank It!" data-name="crank it!" onclick="prepareGame('Crank%20It!','Crank%20It!','games/Crank It!/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="1" data-folder="Crank It!" data-name="crank it!" onclick="prepareGame('Crank%20It!','Crank%20It!','games/Crank It!/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Crank It!/thumbnail.jpg')">
       <img class="thumb" src="games/Crank It!/thumbnail.jpg" alt="Crank It!">
     </div>
     <div class="card-title">Crank It!</div>
-  </div><div class="card game-card" data-index="3" data-folder="FNAF 1" data-name="fnaf 1" onclick="prepareGame('FNAF%201','FNAF%201','games/FNAF 1/thumbnail.png')">
+  </div><div class="card game-card" data-index="2" data-folder="FNAF 1" data-name="fnaf 1" onclick="prepareGame('FNAF%201','FNAF%201','games/FNAF 1/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/FNAF 1/thumbnail.png')">
       <img class="thumb" src="games/FNAF 1/thumbnail.png" alt="FNAF 1">
     </div>
     <div class="card-title">FNAF 1</div>
-  </div><div class="card game-card" data-index="4" data-folder="FNAF 2" data-name="fnaf 2" onclick="prepareGame('FNAF%202','FNAF%202','games/FNAF 2/thumbnail.png')">
+  </div><div class="card game-card" data-index="3" data-folder="FNAF 2" data-name="fnaf 2" onclick="prepareGame('FNAF%202','FNAF%202','games/FNAF 2/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/FNAF 2/thumbnail.png')">
       <img class="thumb" src="games/FNAF 2/thumbnail.png" alt="FNAF 2">
     </div>
     <div class="card-title">FNAF 2</div>
-  </div><div class="card game-card" data-index="5" data-folder="FNAF 3" data-name="fnaf 3" onclick="prepareGame('FNAF%203','FNAF%203','games/FNAF 3/thumbnail.png')">
+  </div><div class="card game-card" data-index="4" data-folder="FNAF 3" data-name="fnaf 3" onclick="prepareGame('FNAF%203','FNAF%203','games/FNAF 3/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/FNAF 3/thumbnail.png')">
       <img class="thumb" src="games/FNAF 3/thumbnail.png" alt="FNAF 3">
     </div>
     <div class="card-title">FNAF 3</div>
-  </div><div class="card game-card" data-index="6" data-folder="FNAF 4" data-name="fnaf 4" onclick="prepareGame('FNAF%204','FNAF%204','games/FNAF 4/thumbnail.png')">
+  </div><div class="card game-card" data-index="5" data-folder="FNAF 4" data-name="fnaf 4" onclick="prepareGame('FNAF%204','FNAF%204','games/FNAF 4/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/FNAF 4/thumbnail.png')">
       <img class="thumb" src="games/FNAF 4/thumbnail.png" alt="FNAF 4">
     </div>
     <div class="card-title">FNAF 4</div>
-  </div><div class="card game-card" data-index="7" data-folder="FNAF Pizzeria Simulator" data-name="fnaf pizzeria simulator" onclick="prepareGame('FNAF%20Pizzeria%20Simulator','FNAF%20Pizzeria%20Simulator','games/FNAF Pizzeria Simulator/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="6" data-folder="FNAF Pizzeria Simulator" data-name="fnaf pizzeria simulator" onclick="prepareGame('FNAF%20Pizzeria%20Simulator','FNAF%20Pizzeria%20Simulator','games/FNAF Pizzeria Simulator/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/FNAF Pizzeria Simulator/thumbnail.jpg')">
       <img class="thumb" src="games/FNAF Pizzeria Simulator/thumbnail.jpg" alt="FNAF Pizzeria Simulator">
     </div>
     <div class="card-title">FNAF Pizzeria Simulator</div>
-  </div><div class="card game-card" data-index="8" data-folder="FNAF Sister Location" data-name="fnaf sister location" onclick="prepareGame('FNAF%20Sister%20Location','FNAF%20Sister%20Location','games/FNAF Sister Location/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="7" data-folder="FNAF Sister Location" data-name="fnaf sister location" onclick="prepareGame('FNAF%20Sister%20Location','FNAF%20Sister%20Location','games/FNAF Sister Location/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/FNAF Sister Location/thumbnail.jpg')">
       <img class="thumb" src="games/FNAF Sister Location/thumbnail.jpg" alt="FNAF Sister Location">
     </div>
     <div class="card-title">FNAF Sister Location</div>
-  </div><div class="card game-card" data-index="9" data-folder="Granny" data-name="granny" onclick="prepareGame('Granny','Granny','games/Granny/thumbnail.png')">
+  </div><div class="card game-card" data-index="8" data-folder="Granny" data-name="granny" onclick="prepareGame('Granny','Granny','games/Granny/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Granny/thumbnail.png')">
       <img class="thumb" src="games/Granny/thumbnail.png" alt="Granny">
     </div>
