--- a/index.html
+++ b/index.html
@@ -937,67 +937,72 @@
       <img class="thumb" src="games/Bounty of One/thumbnail.png" alt="Bounty of One">
     </div>
     <div class="card-title">Bounty of One</div>
-  </div><div class="card game-card" data-index="20" data-folder="Burrito Bison Launcha Libre" data-name="burrito bison launcha libre" onclick="prepareGame('Burrito%20Bison%20Launcha%20Libre','Burrito%20Bison%20Launcha%20Libre','games/Burrito Bison Launcha Libre/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="20" data-folder="Burger and Frights" data-name="burger and frights" onclick="prepareGame('Burger%20and%20Frights','Burger%20and%20Frights','games/Burger and Frights/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Burger and Frights/thumbnail.jpg')">
+      <img class="thumb" src="games/Burger and Frights/thumbnail.jpg" alt="Burger and Frights">
+    </div>
+    <div class="card-title">Burger and Frights</div>
+  </div><div class="card game-card" data-index="21" data-folder="Burrito Bison Launcha Libre" data-name="burrito bison launcha libre" onclick="prepareGame('Burrito%20Bison%20Launcha%20Libre','Burrito%20Bison%20Launcha%20Libre','games/Burrito Bison Launcha Libre/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Burrito Bison Launcha Libre/thumbnail.jpg')">
       <img class="thumb" src="games/Burrito Bison Launcha Libre/thumbnail.jpg" alt="Burrito Bison Launcha Libre">
     </div>
     <div class="card-title">Burrito Bison Launcha Libre</div>
-  </div><div class="card game-card" data-index="21" data-folder="Crazy Cattle 3D" data-name="crazy cattle 3d" onclick="prepareGame('Crazy%20Cattle%203D','Crazy%20Cattle%203D','games/Crazy Cattle 3D/thumbnail.png')">
+  </div><div class="card game-card" data-index="22" data-folder="Crazy Cattle 3D" data-name="crazy cattle 3d" onclick="prepareGame('Crazy%20Cattle%203D','Crazy%20Cattle%203D','games/Crazy Cattle 3D/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Crazy Cattle 3D/thumbnail.png')">
       <img class="thumb" src="games/Crazy Cattle 3D/thumbnail.png" alt="Crazy Cattle 3D">
     </div>
     <div class="card-title">Crazy Cattle 3D</div>
-  </div><div class="card game-card" data-index="22" data-folder="Crazy Motorcycle" data-name="crazy motorcycle" onclick="prepareGame('Crazy%20Motorcycle','Crazy%20Motorcycle','games/Crazy Motorcycle/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="23" data-folder="Crazy Motorcycle" data-name="crazy motorcycle" onclick="prepareGame('Crazy%20Motorcycle','Crazy%20Motorcycle','games/Crazy Motorcycle/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Crazy Motorcycle/thumbnail.jpg')">
       <img class="thumb" src="games/Crazy Motorcycle/thumbnail.jpg" alt="Crazy Motorcycle">
     </div>
     <div class="card-title">Crazy Motorcycle</div>
-  </div><div class="card game-card" data-index="23" data-folder="Crossy Road" data-name="crossy road" onclick="prepareGame('Crossy%20Road','Crossy%20Road','games/Crossy Road/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="24" data-folder="Crossy Road" data-name="crossy road" onclick="prepareGame('Crossy%20Road','Crossy%20Road','games/Crossy Road/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Crossy Road/thumbnail.jpg')">
       <img class="thumb" src="games/Crossy Road/thumbnail.jpg" alt="Crossy Road">
     </div>
     <div class="card-title">Crossy Road</div>
-  </div><div class="card game-card" data-index="24" data-folder="Doki Doki Literature Club" data-name="doki doki literature club" onclick="prepareGame('Doki%20Doki%20Literature%20Club','Doki%20Doki%20Literature%20Club','games/Doki Doki Literature Club/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="25" data-folder="Doki Doki Literature Club" data-name="doki doki literature club" onclick="prepareGame('Doki%20Doki%20Literature%20Club','Doki%20Doki%20Literature%20Club','games/Doki Doki Literature Club/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Doki Doki Literature Club/thumbnail.jpg')">
       <img class="thumb" src="games/Doki Doki Literature Club/thumbnail.jpg" alt="Doki Doki Literature Club">
     </div>
     <div class="card-title">Doki Doki Literature Club</div>
-  </div><div class="card game-card" data-index="25" data-folder="Escape Road " data-name="escape road " onclick="prepareGame('Escape%20Road%20','Escape%20Road%20','games/Escape Road /thumbnail.png')">
+  </div><div class="card game-card" data-index="26" data-folder="Escape Road " data-name="escape road " onclick="prepareGame('Escape%20Road%20','Escape%20Road%20','games/Escape Road /thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Escape Road /thumbnail.png')">
       <img class="thumb" src="games/Escape Road /thumbnail.png" alt="Escape Road ">
     </div>
     <div class="card-title">Escape Road </div>
-  </div><div class="card game-card" data-index="26" data-folder="Escape Road 2" data-name="escape road 2" onclick="prepareGame('Escape%20Road%202','Escape%20Road%202','games/Escape Road 2/thumbnail.png')">
+  </div><div class="card game-card" data-index="27" data-folder="Escape Road 2" data-name="escape road 2" onclick="prepareGame('Escape%20Road%202','Escape%20Road%202','games/Escape Road 2/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Escape Road 2/thumbnail.png')">
       <img class="thumb" src="games/Escape Road 2/thumbnail.png" alt="Escape Road 2">
     </div>
     <div class="card-title">Escape Road 2</div>
-  </div><div class="card game-card" data-index="27" data-folder="Friday Night Funkin" data-name="friday night funkin" onclick="prepareGame('Friday%20Night%20Funkin','Friday%20Night%20Funkin','games/Friday Night Funkin/thumbnail.png')">
+  </div><div class="card game-card" data-index="28" data-folder="Friday Night Funkin" data-name="friday night funkin" onclick="prepareGame('Friday%20Night%20Funkin','Friday%20Night%20Funkin','games/Friday Night Funkin/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Friday Night Funkin/thumbnail.png')">
       <img class="thumb" src="games/Friday Night Funkin/thumbnail.png" alt="Friday Night Funkin">
     </div>
     <div class="card-title">Friday Night Funkin</div>
-  </div><div class="card game-card" data-index="28" data-folder="Fruit Ninja" data-name="fruit ninja" onclick="prepareGame('Fruit%20Ninja','Fruit%20Ninja','games/Fruit Ninja/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="29" data-folder="Fruit Ninja" data-name="fruit ninja" onclick="prepareGame('Fruit%20Ninja','Fruit%20Ninja','games/Fruit Ninja/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Fruit Ninja/thumbnail.jpg')">
       <img class="thumb" src="games/Fruit Ninja/thumbnail.jpg" alt="Fruit Ninja">
     </div>
     <div class="card-title">Fruit Ninja</div>
-  </div><div class="card game-card" data-index="29" data-folder="Geometry Dash Lite" data-name="geometry dash lite" onclick="prepareGame('Geometry%20Dash%20Lite','Geometry%20Dash%20Lite','games/Geometry Dash Lite/thumbnail.png')">
+  </div><div class="card game-card" data-index="30" data-folder="Geometry Dash Lite" data-name="geometry dash lite" onclick="prepareGame('Geometry%20Dash%20Lite','Geometry%20Dash%20Lite','games/Geometry Dash Lite/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Geometry Dash Lite/thumbnail.png')">
       <img class="thumb" src="games/Geometry Dash Lite/thumbnail.png" alt="Geometry Dash Lite">
     </div>
     <div class="card-title">Geometry Dash Lite</div>
-  </div><div class="card game-card" data-index="30" data-folder="Happy Wheels" data-name="happy wheels" onclick="prepareGame('Happy%20Wheels','Happy%20Wheels','games/Happy Wheels/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="31" data-folder="Happy Wheels" data-name="happy wheels" onclick="prepareGame('Happy%20Wheels','Happy%20Wheels','games/Happy Wheels/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Happy Wheels/thumbnail.jpg')">
       <img class="thumb" src="games/Happy Wheels/thumbnail.jpg" alt="Happy Wheels">
     </div>
     <div class="card-title">Happy Wheels</div>
-  </div><div class="card game-card" data-index="31" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="32" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
       <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope">
     </div>
     <div class="card-title">Slope</div>
-  </div><div class="card game-card" data-index="32" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="33" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
